fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,13 @@ body {
 header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-size: 3vw;
-  padding: 10px;
+  height: 5vh;
+  /* padding: 10px; */
+  padding: 0 10px 0 10px;
+  text-align: center;
+  line-height: 5vw;
 }
 
 body,
@@ -34,33 +39,28 @@ header {
   font-size: 5vw;
 }
 
-
-
 .answers{
     color: white;
     width: 20vh;
-}
+} 
+
 
 #col1{
     display: flex;
     flex-wrap: wrap;
-    text-align: center;
     align-items: center;
-    height: 35vh;
+    justify-content: center;
     flex-direction: column;
-    gap: 2px;
+    height: 40vh;
+    text-align: center;
+  }
 
-}
 
 #bottom{
     display:block;
-    position: fixed;
-    bottom: 0;
-    text-align: center;
 
-    padding: 10px;
+    text-align: center;
+    height: 5vh;
     background-color: #d6d7d7; 
-    left:10px;
-    right: 10px;
 
 }
